// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Simple/ItemHeader with created 1`] = `
<CardHeader tag={"div"}>
  <div className={"card-header"}>
    <div className={"item-header"}>
      <FormInput autoComplete={"new-password"} className={"item-name-input"} value={""} placeholder={"Name"} onChange={"function"} onClick={"function"}>
        <input autoComplete={"new-password"} value={""} placeholder={"Name"} onChange={"function"} onClick={"function"} className={"item-name-input form-control"} />
      </FormInput>
      <Badge className={"item-time-pill"} pill={true} theme={"light"} outline={false} tag={"span"}>
        <span className={"item-time-pill badge badge-light badge-pill"}>
          17975d
        </span>
      </Badge>
    </div>
  </div>
</CardHeader>
`;

exports[`Storyshots Simple/ItemHeader with name 1`] = `
<CardHeader tag={"div"}>
  <div className={"card-header"}>
    <div className={"item-header"}>
      <FormInput autoComplete={"new-password"} className={"item-name-input"} value={"Thing to do!"} placeholder={"Name"} onChange={"function"} onClick={"function"}>
        <input autoComplete={"new-password"} value={"Thing to do!"} placeholder={"Name"} onChange={"function"} onClick={"function"} className={"item-name-input form-control"} />
      </FormInput>
      <Badge className={"item-time-pill"} pill={true} theme={"light"} outline={false} tag={"span"}>
        <span className={"item-time-pill badge badge-light badge-pill"}>
          d
        </span>
      </Badge>
    </div>
  </div>
</CardHeader>
`;

exports[`Storyshots Simple/ItemHeader with name and created 1`] = `
<CardHeader tag={"div"}>
  <div className={"card-header"}>
    <div className={"item-header"}>
      <FormInput autoComplete={"new-password"} className={"item-name-input"} value={"Thing to do!"} placeholder={"Name"} onChange={"function"} onClick={"function"}>
        <input autoComplete={"new-password"} value={"Thing to do!"} placeholder={"Name"} onChange={"function"} onClick={"function"} className={"item-name-input form-control"} />
      </FormInput>
      <Badge className={"item-time-pill"} pill={true} theme={"light"} outline={false} tag={"span"}>
        <span className={"item-time-pill badge badge-light badge-pill"}>
          17975d
        </span>
      </Badge>
    </div>
  </div>
</CardHeader>
`;
